--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "2ch-fetcher",
-  "version": "2.3.0",
-  "description": "2ch fetcher",
+  "name": "2ch-fetcher-with-proxy",
+  "version": "1.0.0",
+  "description": "2ch fetcher with proxy",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -12,21 +12,20 @@
     "dist": "rimraf lib && tsc",
     "lint": "tslint -p ."
   },
-  "author": "narazaka",
+  "author": "kako-jun",
   "license": "MIT",
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.4",
-    "@types/request-promise-native": "^1.0.14",
-    "rimraf": "^2.6.2",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "@types/moment-timezone": "^0.5.30",
+    "@types/node": "^14.14.22",
+    "rimraf": "^2.7.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "chardet": "^0.5.0",
-    "iconv-lite": "^0.4.19",
-    "moment": "^2.19.3",
-    "moment-timezone": "^0.5.14",
-    "request": "^2.83.0",
-    "request-promise-native": "^1.0.5"
+    "chardet": "^1.3.0",
+    "iconv-lite": "^0.6.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
+    "node-fetch-with-proxy": "^0.1.2"
   }
 }
